# fly

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compile.py  flags.py  font.py  map.py  run.py  untitled.blend
include/SDL_FontCache/: CMakeLists.txt
lib/SDL_FontCache/: CMakeLists.txt
lib/glad/: glad.h
resources/: airports.json  countries.json  flags.json  font.fontobj  game.json  labels.json  textures.json
resources/font3d/: t.mtl
saves/: 0.save  worlds.json
src/: Airport.cpp  Airport.hpp  AirportManager.hpp  Camera.hpp  CitySpawner.hpp  Country.hpp  Game.hpp  LabelManager.hpp  Map.hpp  Player.cpp  Player.hpp  PlayerCamera.hpp  glad.c  main.cpp
src/airport/: AgentSpawner.hpp  Airport.cpp  Airport.h  Airport.hpp  AirportManager.cpp  AirportManager.hpp  Route.cpp  Route.hpp
src/engine/: Event.hpp  GameObject.hpp  Gradient.h  Gradient.hpp  InputEvent.h  Log.hpp  Renderer.cpp  Renderer.hpp  Scene.h  Scene.hpp  Serializable.h  ShaderProgram.cpp  ShaderProgram.hpp  TextRenderer.cpp  TextRenderer.hpp  Texture.cpp  Texture.hpp  TextureManager.cpp  TextureManager.hpp  Timer.h  Utils.h  Window.cpp  Window.hpp
src/engine/event/: Event.cpp  Event.hpp  EventManager.hpp
src/event/: Event.cpp  Event.hpp
src/game/: Camera.cpp  Camera.hpp  Game.cpp  Game.hpp  GameSaver.cpp  GameSaver.hpp  Types.h
src/map/: CitySpawner.cpp  CitySpawner.hpp  LabelManager.cpp  LabelManager.hpp  Map.cpp  Map.hpp  MapRenderer.cpp  MapRenderer.hpp
src/scenes/: LoadScene.hpp  StartMenu.cpp  StartMenu.hpp  TestScene.hpp
src/shaders/: airport.fs  airport.vs  map.vs  route.vs  text.vs  texture.fs  texture.vs
src/ui/: Dialog.cpp  Dialog.hpp  UIManager.hpp
src/ui/dialogs/: AirportDialog.cpp  AirportDialog.hpp  PauseGameDialog.cpp  PauseGameDialog.hpp  PlaneDialog.cpp  PlaneDialog.hpp  RouteDialog.cpp  RouteDialog.hpp  SelectSaveDialog.cpp  SelectSaveDialog.hpp  UnlockCountryDialog.cpp  UnlockCountryDialog.hpp
